# pyreshape_for_notion

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: pyreshape_for_notion_colab_quickstart.ipynb
pyreshape_for_notion/: __init__.py
pyreshape_for_notion/chatgpt/: __init__.py  parser.py
pyreshape_for_notion/claude/: __init__.py  parser.py
pyreshape_for_notion/core/: __init__.py  diff.py  drive_io.py  filename.py  layout.py  notion_cleanup.py  notion_md.py  pcp_split.py  pipeline.py  schema.py  zip_batch.py
pyreshape_for_notion/gemini/: __init__.py  parser.py
tests/: test_filename_rename.py  test_notion_cleanup.py  test_notion_md_v2.py  test_pcp_022_005_multi_text_merge.py  test_pcp_022_006_gemini_inline_hr.py  test_pcp_022_tool_use_pairing.py  test_smoke.py
